# linkml-renderer

./: .cruft.json  .gitignore  Makefile  README.md  genindex.html  index.html  linkml_renderer.html  linkml_renderer.paths.html  linkml_renderer.renderers.html  linkml_renderer.style.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: linkml_renderer.paths.rst.txt  linkml_renderer.renderers.rst.txt  linkml_renderer.rst.txt  linkml_renderer.style.rst.txt  modules.rst.txt
docs/: conf.py  index.rst
src/linkml_renderer/: __init__.py  cli.py
src/linkml_renderer/paths/: context.py  html_context.py
src/linkml_renderer/renderers/: html_renderer.py  markdown_renderer.py  mermaid_renderer.py  renderer.py
src/linkml_renderer/style/: model.py  model.yaml  style_engine.py
tests/: __init__.py
tests/test_paths/: test_context.py
tests/test_renderers/: __init__.py  test_cli.py  test_html_renderer.py  test_markdown_renderer.py  test_mermaid_renderer.py  test_renderer.py
tests/test_renderers/input/: conf-person-wide.yaml  conf-pfx.yaml  conf-with-mermaid.yaml
tests/test_renderers/input/oakstats/: go-stats.yaml
tests/test_renderers/input/personinfo/: personinfo.yaml
tests/test_style/: test_style_engine.py
