[tool.poetry]
name = "linkml-renderer"
version = "0.0.0"
description = "linkml-renderer"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "Apache Software License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
airium = "^0.2.5"
click = "^8.1.3"
linkml-runtime = ">=1.4.1"
myst-parser = {version = "^0.18.1", extras = ["docs"]}
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
poetry-dynamic-versioning = "^0.21.3"
tox = "^3.25.1"
linkml = ">=1.4.1"

[tool.poetry.scripts]
linkml-render = "linkml_renderer.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
